--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resume</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style2.css">
 </head>
 <body >
     
@@ -12,13 +12,13 @@
         <!-- Sidebar -->
         <aside class="sidebar">
             <div class="profile">
-                <img src="WhatsApp Image 2025-03-06 at 21.33.29_9a640f94.jpg" alt="Profile Picture" class="image">
-                <h2 class="profile-heading">Vadla Gnaneshwar</h2>
+                <img src="WhatsApp Image 2025-03-07 at 08.01.12_56084840.jpg" alt="Profile Picture" class="image">
+                <h2 class="profile-heading">vamsi krishna</h2>
                 <p class="profile-paragraph">Frontend Developer 💻 </p>
             </div>
             <div class="contact">
-                <p class="profile-paragraph">Email: vadlagnaneshwar940@gmail.com</p>
-                <p class="profile-paragraph">Phone: +91 9381871549</p>
+                <p class="profile-paragraph">Email: vamsikrishnasiriveri@gmail.com</p>
+                <p class="profile-paragraph">Phone: +91 9182079331</p>
                 <p class="profile-paragraph">Location: Hyderabad, India</p>
             </div>
             <div class="skills">
@@ -38,11 +38,11 @@
             <section class="section">
                 <h2 class="sub-heading">Experience</h2>
                 <div class="job">
-                    <h3 class="description-heading" style="background-color:slateblue ;">Frontend Developer - ABC Corp</h3>
-                    <p class="description-paragraph"style="background-color:slateblue ;"><i>Jan 2025 - Present</i></p>
-                    <p class="description-paragraph"style="background-color:slateblue ;">Developed responsive websites, optimized UI/UX, and worked with React.js.</p>
+                    <h3 class="description-heading">Frontend Developer - ABC Corp</h3>
+                    <p class="description-paragraph"><i>Jan 2025 - Present</i></p>
+                    <p class="description-paragraph">Developed responsive websites, optimized UI/UX, and worked with React.js.</p>
                 </div>
-                <div class="job" style="background-color: slateblue;" >
+                <div class="job">
                     <h3 class="description-heading">Web Developer Intern - XYZ Solutions</h3>
                     <p class="description-paragraph"><i>Jun 2024 - Dec 2024</i></p>
                     <p class="description-paragraph">Assisted in building landing pages and implemented SEO best practices.</p>
@@ -51,7 +51,7 @@
 
             <section class="section">
                 <h2 class="sub-heading">Education</h2>
-                <div class="education" style="background-color: slateblue;">
+                <div class="education">
                     <h3 class="description-heading">Bachelor's in Computer Science</h3>
                     <p class="description-paragraph"><i>2020 - 2024</i></p>
                     <p class="description-paragraph">University of New York</p>
@@ -60,11 +60,11 @@
 
             <section class="section">
                 <h2 class="sub-heading">Projects</h2>
-                <div class="project" style="background-color: slateblue;">
+                <div class="project">
                     <h3 class="description-heading">Portfolio Website</h3>
                     <p class="description-paragraph">Built a personal portfolio using React and Tailwind CSS.</p>
                 </div>
-                <div class="project" style="background-color:slateblue ;">
+                <div class="project">
                     <h3 class="description-heading">E-commerce Landing Page</h3>
                     <p class="description-paragraph">Designed and developed an interactive landing page for an online store.</p>
                 </div>
